fix(@bento-editor/example-nextjs-app-router): set border color for dark mode

--- a/examples/nextjs-app-router/app/globals.css
+++ b/examples/nextjs-app-router/app/globals.css
@@ -42,4 +42,8 @@ a {
   .editor {
     border: 1px solid white;
   }
+
+  .result {
+    border: 1px solid white;
+  }
 }
